# Learning-CMake-slide

./: Pages.qml  README  README.rst  SimpleSlide.pro  presentation.qml  qml.qrc  theme.qrc
page/: 1.qml  2-1.qml  2-2.qml  2.qml  3-1.qml  3-2.qml  3-3.qml  3.qml  4-1.qml  4-2.qml  4-3.qml  4-4.qml  4-5.qml  4.qml  5-1.qml  5-2.qml  5-3.qml  5.qml  6-1.qml  6-2.qml  6-3.qml  6-4.qml  6.qml  agenda.qml  back_page.qml  build_systems.qml  cmake_advantage_and_more.qml  cmake_and_its_family.qml  cmake_project_structure_a_live_demo.qml  cmake_project_structure_a_modularized_project.qml  cmake_project_structure_a_simple_project.qml  front_page.qml  how_fast_cmake_is.qml  how_popular_cmake_is.qml  pages.qml  qa.qml  ref_chapter.qml  second_chapter_4.qml
page/assets/: Boost.txt  CMakeLists.html  CMakeLists.txt  Cairo.txt  GTK2.txt  Java.txt  Lua.txt  Perl.txt  Protobuf.txt  Python.txt  SWIG2.txt  Xerces-C.txt  cmake_system_output.html  cmakepaths.txt  cpack.txt  ctest.txt  custom_command.txt  flagsanddefinitions.txt  fortran.txt  hellocmake.txt  milliuno.cpp.html  milliuno.h.html  properties.txt  targets.txt  wxWidgets.txt
page/assets/port/: system_port.txt
page/images/: .directory
qml/: CodeView.qml  NestedList.qml  Slide.qml  Style.qml  pages.json
qml/theme/: BackPage.qml  ContentArea.qml  Footer.qml  FrontPage.qml  Header.qml  Style.qml  StyleText.qml
theme/: BackGround.qml  BackPage.qml  ContentArea.qml  Footer.qml  FrontPage.qml  Header.qml  Style.qml  StyleText.qml
theme/default/: BackGround.qml  BackPage.qml  ContentArea.qml  Footer.qml  FrontPage.qml  (+2 more)
